...
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_mercury"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="mercury"
            android:text="Mercury" />

        <Button
            android:id="@+id/btn_venus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_venus"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="venus"
            android:text="Venus" />

        <Button
            android:id="@+id/btn_earth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_earth"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="earth"
            android:text="Earth" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
...
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_mars"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="mars"
            android:text="Mars" />

        <Button
            android:id="@+id/btn_jupiter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
...
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="jupiter"
            android:text="jupiter" />

        <Button
            android:id="@+id/btn_saturn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_saturn"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="saturn"
            android:text="Saturn" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
...
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_uranus"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="uranus"
            android:text="Uranus" />

        <Button
            android:id="@+id/btn_neptune"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_neptune"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="neptune"
            android:text="Neptune" />

        <Button
            android:id="@+id/btn_pluto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_pluto"
            android:drawablePadding="15dp"
            android:padding="25dp"
            android:tag="pluto"
            android:text="Pluto" />
    </TableRow>


</TableLayout>
