...
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:gravity="center|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_book"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@android:color/transparent"
...
