...
                    android:layout_height="wrap_content"
                    android:text="Flights from: "
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/planetFromLocations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Here"
                    android:textSize="18sp" />

            </TableRow>
...
                    android:layout_height="wrap_content"
                    android:text="Flights to: "
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/planetToLocations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Here"
                    android:textSize="18sp" />

            </TableRow>
...
