...
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_weight="1"
                android:text="Title"
                android:textColor="@color/black"
...
